--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, at rerum! Explicabo dolores beatae, tenetur dignissimos adipisci dicta quo ratione fugiat sint saepe repudiandae ea nemo. Laboriosam, similique quaerat. Adipisci.</div>
+        </main>
+        <aside>
+            <div class="aside-container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit a dolor animi saepe quas deserunt sunt neque corrupti, quae culpa dolores magni, dolorum qui quis deleniti porro soluta fugiat dignissimos.</div>
+        </aside>
+    </div>
 </body>
 </html>
