conteudo asside e conteudo inicial do main

--- a/index.html
+++ b/index.html
@@ -13,10 +13,31 @@
 <body>
     <div id="app">
         <main>
-            <div class="main-container">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, at rerum! Explicabo dolores beatae, tenetur dignissimos adipisci dicta quo ratione fugiat sint saepe repudiandae ea nemo. Laboriosam, similique quaerat. Adipisci.</div>
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="icone de voltar">
+                    <span>voltar</span>
+                </div>
+
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+            </div>
         </main>
         <aside>
-            <div class="aside-container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit a dolor animi saepe quas deserunt sunt neque corrupti, quae culpa dolores magni, dolorum qui quis deleniti porro soluta fugiat dignissimos.</div>
+            <div class="aside-container">
+                <header>
+                    <img src="assets/logo.svg" alt="logo estrelas do amanhã">
+                    <h2>
+                        Porque cada momento de
+                    <span>
+                        aprendizado 
+                    </span>
+                    conta
+                    </h2>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+                </header>
+                <img src="assets/Illustration.svg" alt="ilustraçao de uma professora com crianças prestando a atenção">
+            </div>
         </aside>
     </div>
 </body>
