--- a/index.html
+++ b/index.html
@@ -21,6 +21,52 @@
 
                 <h1>Formulário de matrícula</h1>
                 <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+
+                <form method="post" enctype="multipart/form-data">
+                    <fieldset class="child-info">
+                        <legend>Informações da criança</legend>
+                    
+                    <div class="input-wrapper">
+                        <label for="full name">nome completo</label>
+                        <input 
+                        id="full name" 
+                        type="text" 
+                        placeholder="qual o nome da criança">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="birth">data de nascimento</label>
+                        <input type="date" id="birth" name="birth" lang="pt-br">
+                    </div>
+
+                    <div class="select-wrapper">
+                        <label for="gender">sexo</label>
+                        <select name="gender" id="gender">
+                            <option value="female">feminino</option>
+                            <option value="male">masculino</option>
+                            <option value="na">prefiro não responder</option>
+                        </select>
+                    </div>
+
+                    <div class="textarea-wrapper">
+                        <label for="medical-info">informações médicas</label>
+                        <textarea name="medical-info" id="medical-info"
+                        cols="30" rows="10"
+                        placeholder="a cirança possui alguma condiçao medica que a escola deve estar ciente? (se sim, especifique)"
+                        ></textarea>
+                    </div>
+
+                    <div class="droparea-wrapper">
+                        <input type="file" id="birth-file" name="birth-file">
+                        <img src="assets/icons/cloud-upload.svg" alt="">
+                        <p>
+                            Clique aqui para <br>
+                            selecionar os arquivos
+                        </p>
+                    </div>
+                    
+                    </fieldset>
+                </form>
             </div>
         </main>
         <aside>
