--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                                     <div class="radio-img">
                                         <input type="radio" name="study-shift" value="morning" id="morning">
                                         <img src="assets/icons/sun-cloud-02.svg" alt="icone de sol com nuvem">
-                                        <label for="morning">Manhã</label>
+                                        <label for="morning">Manhã
+                                            
+                                        </label>
                                     </div>
 
                                     <div class="radio-inner">
@@ -166,6 +168,54 @@
                                         </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label>Em qual esporte você gostaria de escrever seu filho?</label>
+
+                            <div class="radio-wrapper">
+                                <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="sport" id="football">
+                                <img src="assets/icons/football.svg" alt="ícone de futebol">
+                                <label for="football">Futebol</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="sport" id="basketball">
+                                <img src="assets/icons/basketball-02.svg" alt="ícone de basquete">
+                                <label for="basketball">Basquete</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="sport" id="swimming">
+                                <img src="assets/icons/swimming.svg" alt="ícone de Natação">
+                                <label for="swimming">Natação</label>
+                            </div>
+
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="sport" id="yoga">
+                                <img src="assets/icons/yoga-02.svg" alt="ícone de Yoga">
+                                <label for="yoga">Yoga</label>
+                            </div>
+                        </div>
+
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                            <input type="radio" name="sport" id="voleyball">
+                            <img src="assets/icons/volleyball.svg" alt="ícone de volleyball">
+                            <label for="volleyball">volleyball</label>
+                        </div>
+                        <div class="radio-inner">
+                            <div class="radio-image"></div>
+                            <input type="radio" name="sport" id="boxing">
+                            <img src="assets/icons/boxing-glove-01.svg" alt="ícone de boxing">
+                            <label for="boxing">boxe</label>
+                        </div>
+                    </div>
                         </div>
                     </fieldset>
                 </form>
