--- a/index.html
+++ b/index.html
@@ -226,6 +226,17 @@
                             Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
                         </label>
                     </div>
+
+                    <div class="actions-wrapper">
+                        <button class="btn-secondary" type="button">
+                            salvar respostas
+                        </button>
+
+                        <button class="btn-primary">
+                            Fazer matricula
+                        </button>
+                    </div>
+
                 </form>
             </div>
         </main>
